ATRIL BACKPORTS: comics: Fix some memory leaks

commit 0cd127f0d86bda4a6f1645745af7b1cab84490f0
Author: raveit65 <chat-to-me@raveit.de>
Date:   Fri Jun 24 19:52:10 2016 +0200

    comics: Fix some memory leaks

    http://bugzilla.gnome.org/show_bug.cgi?id=667258

    taken from:
    https://git.gnome.org/browse/evince/commit/?id=d397c6d